Lex/gen_PPDirectiveParser.py
from Parse.Builder import ParserBase, memorize, memorize_left_rec
from Basic import *
from AST import *

def reconstruct(if_group, else_groups):
    p = if_group
    for else_group in else_groups:
        p.else_group = else_group
        p = p.else_group
    return if_group
from AST import *
from Basic import *

def assign(a, attr, b):
    setattr(a, attr, b)
    return a

def option(a, default):
    return a if a != None else default

def concat_pointer(a, b):
    if a == None:
        return b
    c = a
    while c.declarator != None:
        c = c.declarator
    c.declarator = b
    return a

class Gen_PPDirectiveParser(ParserBase):

    @memorize
    def primary_expression(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (defined_macro_expression := self.defined_macro_expression()):
            return defined_macro_expression
        self.restore(_z)
        if (has_include_expression := self.has_include_expression()):
            return has_include_expression
        self.restore(_z)
        if (has_embed_expression := self.has_embed_expression()):
            return has_embed_expression
        self.restore(_z)
        if (has_c_attribute_express := self.has_c_attribute_express()):
            return has_c_attribute_express
        self.restore(_z)
        if (a := self.identifier()):
            return Reference(name=a.text, location=a.location)
        self.restore(_z)
        if (constant := self.constant()):
            return constant
        self.restore(_z)
        if (a := self.string_literal()):
            return StringLiteral(value=a.content, prefix=a.prefix, location=a.location)
        self.restore(_z)
        if self.expect(TokenKind.L_PAREN) and (a := self.expression()) and self.expect(TokenKind.R_PAREN):
            return a
        self.restore(_z)
        if (generic_selection := self.generic_selection()):
            return generic_selection
        self.restore(_z)
        if self.expect(TokenKind.L_PAREN) and (expression := self.expression()):
            return self.error("前面应有')'", self.curtoken().location)
        self.restore(_z)
        return None

    @memorize
    def defined_macro_expression(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.expect(TokenKind.DEFINED)) and (b := self.identifier()):
            return Defined(location=a.location, name=b.text)
        self.restore(_z)
        if (a := self.expect(TokenKind.DEFINED)) and self.expect(TokenKind.L_PAREN) and (b := self.identifier()) and self.expect(TokenKind.R_PAREN):
            return Defined(location=a.location, name=b.text)
        self.restore(_z)
        if (a := self.expect(TokenKind.DEFINED)) and self.expect(TokenKind.L_PAREN) and (b := self.identifier()):
            return self.error("期待')'", self.curtoken().location)
        self.restore(_z)
        if (a := self.expect(TokenKind.DEFINED)) and self.expect(TokenKind.L_PAREN):
            return self.error('期待标识符', self.curtoken().location)
        self.restore(_z)
        if (a := self.expect(TokenKind.DEFINED)):
            return self.error('期待标识符', self.curtoken().location)
        self.restore(_z)
        return None

    @memorize
    def has_include_expression(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.expect(TokenKind.HAS_INCLUDE)) and self.expect(TokenKind.L_PAREN) and (b := self.header_name()) and self.expect(TokenKind.R_PAREN):
            return HasInclude(location=a.location, filename=b.text, search_current_path=False)
        self.restore(_z)
        if (a := self.expect(TokenKind.HAS_INCLUDE)) and self.expect(TokenKind.L_PAREN) and (b := self.string_literal()) and self.expect(TokenKind.R_PAREN):
            return HasInclude(location=a.location, filename=b.text[1:-1], search_current_path=True)
        self.restore(_z)
        if (a := self.expect(TokenKind.HAS_INCLUDE)) and self.expect(TokenKind.L_PAREN) and (b := self.header_name()):
            return self.error("期待')'", self.curtoken().location)
        self.restore(_z)
        if (a := self.expect(TokenKind.HAS_INCLUDE)) and self.expect(TokenKind.L_PAREN) and (b := self.string_literal()):
            return self.error("期待')'", self.curtoken().location)
        self.restore(_z)
        if (a := self.expect(TokenKind.HAS_INCLUDE)) and self.expect(TokenKind.L_PAREN):
            return self.error('期待"文件名"或<文件名>', self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.HAS_INCLUDE):
            return self.error("期待'('", self.curtoken().location)
        self.restore(_z)
        return None

    @memorize
    def has_embed_expression(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.expect(TokenKind.HAS_EMBED)) and self.expect(TokenKind.L_PAREN) and (b := self.header_name()) and ((c := self.embed_parameter_sequence()),) and self.expect(TokenKind.R_PAREN):
            return HasEmbed(location=a.location, filename=b.text, search_current_path=False, parameters=c)
        self.restore(_z)
        if (a := self.expect(TokenKind.HAS_EMBED)) and self.expect(TokenKind.L_PAREN) and (b := self.string_literal()) and ((c := self.embed_parameter_sequence()),) and self.expect(TokenKind.R_PAREN):
            return HasEmbed(location=a.location, filename=b.text[1:-1], search_current_path=True, parameters=c)
        self.restore(_z)
        if (a := self.expect(TokenKind.HAS_EMBED)) and self.expect(TokenKind.L_PAREN) and (b := self.header_name()) and ((embed_parameter_sequence := self.embed_parameter_sequence()),):
            return self.error("期待')'", self.curtoken().location)
        self.restore(_z)
        if (a := self.expect(TokenKind.HAS_EMBED)) and self.expect(TokenKind.L_PAREN) and (b := self.string_literal()) and ((embed_parameter_sequence := self.embed_parameter_sequence()),):
            return self.error("期待')'", self.curtoken().location)
        self.restore(_z)
        if (a := self.expect(TokenKind.HAS_EMBED)) and self.expect(TokenKind.L_PAREN):
            return self.error('期待"文件名"或<文件名>', self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.HAS_EMBED):
            return self.error("期待'('", self.curtoken().location)
        self.restore(_z)
        return None

    @memorize
    def has_c_attribute_express(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.expect(TokenKind.HAS_C_ATTRIBUTE)) and self.expect(TokenKind.L_PAREN) and (b := self.attribute()) and self.expect(TokenKind.R_PAREN):
            return HasCAttribute(location=a.location, attribute=b)
        self.restore(_z)
        if (a := self.expect(TokenKind.HAS_C_ATTRIBUTE)) and self.expect(TokenKind.L_PAREN) and (b := self.attribute()):
            return self.error("期待')'", self.curtoken().location)
        self.restore(_z)
        if (a := self.expect(TokenKind.HAS_C_ATTRIBUTE)) and self.expect(TokenKind.L_PAREN):
            return self.error('期待属性', self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.HAS_C_ATTRIBUTE):
            return self.error("期待'('", self.curtoken().location)
        self.restore(_z)
        return None

    @memorize
    def start(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (group_part := self.group_part()):
            return group_part
        self.restore(_z)
        if (a := self.translation_unit()) and (end := self.end()):
            return TranslationUnit(body=a, location=begin_location)
        self.restore(_z)
        if (translation_unit := self.translation_unit()):
            return self.error('解析已结束, 但文件未结束', self.curtoken().location)
        self.restore(_z)
        return None

    @memorize_left_rec
    def translation_unit(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.translation_unit()) and (b := self.external_declaration()):
            return a + [b]
        self.restore(_z)
        if (b := self.external_declaration()):
            return [b]
        self.restore(_z)
        return None

    @memorize
    def external_declaration(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (function_definition := self.function_definition()):
            return function_definition
        self.restore(_z)
        if (declaration := self.declaration()):
            return declaration
        self.restore(_z)
        return None

    @memorize
    def function_definition(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if ((a := self.attribute_specifier_sequence()),) and (b := self.declaration_specifiers()) and (c := self.declarator()) and (d := self.function_body()):
            return FunctionDef(attribute_specifiers=option(a, []), specifiers=b[0], specifier_attributes=b[1], declarator=c, body=d, location=begin_location)
        self.restore(_z)
        return None

    @memorize
    def function_body(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (compound_statement := self.compound_statement()):
            return compound_statement
        self.restore(_z)
        return None

    @memorize
    def statement(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (labeled_statement := self.labeled_statement()):
            return labeled_statement
        self.restore(_z)
        if (unlabeled_statement := self.unlabeled_statement()):
            return unlabeled_statement
        self.restore(_z)
        return None

    @memorize
    def unlabeled_statement(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (expression_statement := self.expression_statement()):
            return expression_statement
        self.restore(_z)
        if ((b := self.attribute_specifier_sequence()),) and (a := self.primary_block()):
            return assign(a, 'attribute_specifiers', option(b, []))
        self.restore(_z)
        if ((b := self.attribute_specifier_sequence()),) and (a := self.jump_statement()):
            return assign(a, 'attribute_specifiers', option(b, []))
        self.restore(_z)
        return None

    @memorize
    def primary_block(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (compound_statement := self.compound_statement()):
            return compound_statement
        self.restore(_z)
        if (selection_statement := self.selection_statement()):
            return selection_statement
        self.restore(_z)
        if (iteration_statement := self.iteration_statement()):
            return iteration_statement
        self.restore(_z)
        return None

    @memorize
    def secondary_block(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (statement := self.statement()):
            return statement
        self.restore(_z)
        return None

    @memorize
    def label(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if ((b := self.attribute_specifier_sequence()),) and (a := self.identifier()) and self.expect(TokenKind.COLON):
            return LabelStmt(name=a.text, attribute_specifiers=option(b, []), location=a.location)
        self.restore(_z)
        if ((b := self.attribute_specifier_sequence()),) and (a := self.expect(TokenKind.CASE)) and (c := self.constant_expression()) and self.expect(TokenKind.COLON):
            return CaseStmt(expr=c, attribute_specifiers=option(b, []), location=a.location)
        self.restore(_z)
        if ((b := self.attribute_specifier_sequence()),) and (a := self.expect(TokenKind.DEFAULT)) and self.expect(TokenKind.COLON):
            return DefaultStmt(attribute_specifiers=option(b, []), location=a.location)
        self.restore(_z)
        if ((attribute_specifier_sequence := self.attribute_specifier_sequence()),) and (a := self.expect(TokenKind.CASE)) and (constant_expression := self.constant_expression()):
            return self.error("'case'后的常量表达式后应有':'", a.location)
        self.restore(_z)
        if ((attribute_specifier_sequence := self.attribute_specifier_sequence()),) and (a := self.expect(TokenKind.CASE)):
            return self.error("'case'后应跟常量表达式", a.location)
        self.restore(_z)
        if ((attribute_specifier_sequence := self.attribute_specifier_sequence()),) and (a := self.expect(TokenKind.DEFAULT)):
            return self.error("'default'后缺':'", a.location)
        self.restore(_z)
        return None

    @memorize
    def labeled_statement(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.label()) and (b := self.statement()):
            return assign(a, 'stmt', b)
        self.restore(_z)
        return None

    @memorize
    def compound_statement(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (b := self.expect(TokenKind.L_BRACE)) and ((a := self.block_item_list()),) and self.expect(TokenKind.R_BRACE):
            return CompoundStmt(items=option(a, []), location=b.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.L_BRACE)) and ((block_item_list := self.block_item_list()),):
            return self.error('大括号未闭合', a.location)
        self.restore(_z)
        return None

    @memorize_left_rec
    def block_item_list(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.block_item_list()) and (b := self.block_item()):
            return a + [b]
        self.restore(_z)
        if (b := self.block_item()):
            return [b]
        self.restore(_z)
        return None

    @memorize
    def block_item(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (declaration := self.declaration()):
            return declaration
        self.restore(_z)
        if (unlabeled_statement := self.unlabeled_statement()):
            return unlabeled_statement
        self.restore(_z)
        if (label := self.label()):
            return label
        self.restore(_z)
        return None

    @memorize
    def expression_statement(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.attribute_specifier_sequence()) and (b := self.expression()) and self.expect(TokenKind.SEMI):
            return ExpressionStmt(attribute_specifiers=a, expr=b, location=a.location)
        self.restore(_z)
        if ((a := self.expression()),) and self.expect(TokenKind.SEMI):
            return ExpressionStmt(expr=a, location=begin_location)
        self.restore(_z)
        return None

    @memorize
    def selection_statement(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.expect(TokenKind.IF)) and self.expect(TokenKind.L_PAREN) and (b := self.expression()) and self.expect(TokenKind.R_PAREN) and (c := self.secondary_block()) and self.expect(TokenKind.ELSE) and (d := self.secondary_block()):
            return IfStmt(condition_expr=b, body=c, else_body=d, location=a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.IF)) and self.expect(TokenKind.L_PAREN) and (b := self.expression()) and self.expect(TokenKind.R_PAREN) and (c := self.secondary_block()):
            return IfStmt(condition_expr=b, body=c, else_body=None, location=a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.SWITCH)) and self.expect(TokenKind.L_PAREN) and (b := self.expression()) and self.expect(TokenKind.R_PAREN) and (c := self.secondary_block()):
            return SwitchStmt(condition_expr=b, body=c, location=a.location)
        self.restore(_z)
        if self.expect(TokenKind.IF) and self.expect(TokenKind.L_PAREN) and (expression := self.expression()) and (a := self.expect(TokenKind.R_PAREN)) and (secondary_block := self.secondary_block()) and self.expect(TokenKind.ELSE):
            return self.error('缺少else的语句体', a.location)
        self.restore(_z)
        if self.expect(TokenKind.IF) and self.expect(TokenKind.L_PAREN) and (expression := self.expression()) and (a := self.expect(TokenKind.R_PAREN)):
            return self.error('后面缺少语句体', a.location)
        self.restore(_z)
        if self.expect(TokenKind.IF) and self.expect(TokenKind.L_PAREN) and (expression := self.expression()):
            return self.error("'('未闭合", self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.IF) and (a := self.expect(TokenKind.L_PAREN)):
            return self.error('后面期待一个表达式', a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.IF)):
            return self.error("后面应该为'('", a.location)
        self.restore(_z)
        if self.expect(TokenKind.SWITCH) and self.expect(TokenKind.L_PAREN) and (expression := self.expression()) and (a := self.expect(TokenKind.R_PAREN)):
            return self.error('后面缺少语句体', a.location)
        self.restore(_z)
        if self.expect(TokenKind.SWITCH) and self.expect(TokenKind.L_PAREN) and (expression := self.expression()):
            return self.error("'('未闭合", self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.SWITCH) and (a := self.expect(TokenKind.L_PAREN)):
            return self.error('后面期待一个表达式', a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.SWITCH)):
            return self.error("后面应该为'('", a.location)
        self.restore(_z)
        return None

    @memorize
    def iteration_statement(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.expect(TokenKind.WHILE)) and self.expect(TokenKind.L_PAREN) and (b := self.expression()) and self.expect(TokenKind.R_PAREN) and (c := self.secondary_block()):
            return WhileStmt(condition_expr=b, body=c, location=a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.DO)) and (b := self.secondary_block()) and self.expect(TokenKind.WHILE) and self.expect(TokenKind.L_PAREN) and (c := self.expression()) and self.expect(TokenKind.R_PAREN) and self.expect(TokenKind.SEMI):
            return DoWhileStmt(condition_expr=c, body=b, location=a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.FOR)) and self.expect(TokenKind.L_PAREN) and ((b := self.expression()),) and self.expect(TokenKind.SEMI) and ((c := self.expression()),) and self.expect(TokenKind.SEMI) and ((d := self.expression()),) and self.expect(TokenKind.R_PAREN) and (e := self.secondary_block()):
            return ForStmt(init=b, condition_expr=c, increase_expr=d, body=e, location=a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.FOR)) and self.expect(TokenKind.L_PAREN) and (b := self.declaration()) and ((c := self.expression()),) and self.expect(TokenKind.SEMI) and ((d := self.expression()),) and self.expect(TokenKind.R_PAREN) and (e := self.secondary_block()):
            return ForStmt(init=b, condition_expr=c, increase_expr=d, body=e, location=a.location)
        self.restore(_z)
        if self.expect(TokenKind.WHILE) and self.expect(TokenKind.L_PAREN) and (expression := self.expression()) and (a := self.expect(TokenKind.R_PAREN)):
            return self.error('后面缺少语句体', a.location)
        self.restore(_z)
        if self.expect(TokenKind.WHILE) and self.expect(TokenKind.L_PAREN) and (expression := self.expression()):
            return self.error("'('未闭合", self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.WHILE) and (a := self.expect(TokenKind.L_PAREN)):
            return self.error('后面期待一个表达式', a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.WHILE)):
            return self.error("后面应该为'('", a.location)
        self.restore(_z)
        if self.expect(TokenKind.DO) and (secondary_block := self.secondary_block()) and self.expect(TokenKind.WHILE) and self.expect(TokenKind.L_PAREN) and (expression := self.expression()) and (a := self.expect(TokenKind.R_PAREN)):
            return self.error("do-while语句后应有';'", a.location)
        self.restore(_z)
        if self.expect(TokenKind.DO) and (secondary_block := self.secondary_block()) and self.expect(TokenKind.WHILE) and self.expect(TokenKind.L_PAREN) and (expression := self.expression()):
            return self.error("'('未闭合", self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.DO) and (secondary_block := self.secondary_block()) and self.expect(TokenKind.WHILE) and (a := self.expect(TokenKind.L_PAREN)):
            return self.error('后面期待一个表达式', a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.DO)) and (secondary_block := self.secondary_block()) and self.expect(TokenKind.WHILE):
            return self.error("后面应该为'('", a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.DO)):
            return self.error("'do'后面缺少语句体", a.location)
        self.restore(_z)
        if self.expect(TokenKind.FOR) and self.expect(TokenKind.L_PAREN) and ((expression := self.expression()),) and self.expect(TokenKind.SEMI) and ((expression := self.expression()),) and self.expect(TokenKind.SEMI) and ((expression := self.expression()),) and (a := self.expect(TokenKind.R_PAREN)):
            return self.error('缺少for的语句体', a.location)
        self.restore(_z)
        if self.expect(TokenKind.FOR) and self.expect(TokenKind.L_PAREN) and ((expression := self.expression()),) and self.expect(TokenKind.SEMI) and ((expression := self.expression()),) and self.expect(TokenKind.SEMI) and ((expression := self.expression()),):
            return self.error("前面应有')'", self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.FOR) and self.expect(TokenKind.L_PAREN) and ((expression := self.expression()),) and self.expect(TokenKind.SEMI) and ((expression := self.expression()),):
            return self.error("前面应有';'", self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.FOR) and self.expect(TokenKind.L_PAREN) and ((expression := self.expression()),):
            return self.error("前面应有';'", self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.FOR) and self.expect(TokenKind.L_PAREN) and (declaration := self.declaration()) and ((expression := self.expression()),) and self.expect(TokenKind.SEMI) and ((expression := self.expression()),) and (a := self.expect(TokenKind.R_PAREN)):
            return self.error('缺少for的语句体', a.location)
        self.restore(_z)
        if self.expect(TokenKind.FOR) and self.expect(TokenKind.L_PAREN) and (declaration := self.declaration()) and ((expression := self.expression()),) and self.expect(TokenKind.SEMI) and ((expression := self.expression()),):
            return self.error("前面应有')'", self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.FOR) and self.expect(TokenKind.L_PAREN) and (declaration := self.declaration()) and ((expression := self.expression()),):
            return self.error("前面应有';'", self.curtoken().location)
        self.restore(_z)
        if self.expect(TokenKind.FOR) and (a := self.expect(TokenKind.L_PAREN)):
            return self.error('后面期待表达式或声明', a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.FOR)):
            return self.error("后面应该为'('", a.location)
        self.restore(_z)
        return None

    @memorize
    def jump_statement(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.expect(TokenKind.GOTO)) and (b := self.identifier()) and self.expect(TokenKind.SEMI):
            return GotoStmt(name=b.text, location=a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.CONTINUE)) and self.expect(TokenKind.SEMI):
            return ContinueStmt(location=a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.BREAK)) and self.expect(TokenKind.SEMI):
            return BreakStmt(location=a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.RETURN)) and ((b := self.expression()),) and self.expect(TokenKind.SEMI):
            return ReturnStmt(expr=b, location=a.location)
        self.restore(_z)
        if self.expect(TokenKind.GOTO) and (identifier := self.identifier()):
            return self.error("前面期待一个';'", self.curtoken().location)
        self.restore(_z)
        if (a := self.expect(TokenKind.GOTO)):
            return self.error('goto后面应有一个标识符', a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.CONTINUE)):
            return self.error("后面缺少一个';'", a.location)
        self.restore(_z)
        if (a := self.expect(TokenKind.BREAK)):
            return self.error("后面缺少一个';'", a.location)
        self.restore(_z)
        if self.expect(TokenKind.RETURN) and ((expression := self.expression()),):
            return self.error("前面缺少一个';'", self.curtoken().location)
        self.restore(_z)
        return None

    @memorize
    def constant_expression(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (conditional_expression := self.conditional_expression()):
            return conditional_expression
        self.restore(_z)
        return None

    @memorize_left_rec
    def expression(self):
        begin_location = self.curtoken().location
        _z = self.save()
        if (a := self.expression()) and (c := self.expect(TokenKind.COMMA)) and (b := self.assignment_expression()):
            return BinaryOperator(op=BinOpKind.COMMA, left=a, right=b, location=c.location)
        self.restore(_z)
        if (assignment_expression := self.assignment_expression()):
            return assignment_expression
        self.restore(_z)
        return None
